--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,23 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/jetbrains-mono": "^5.0.19",
+    "@fontsource-variable/overpass": "^5.0.17",
+    "@fontsource/jetbrains-mono": "^5.0.18",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@react-three/drei": "^9.97.0",
+    "@react-three/fiber": "^8.15.16",
     "framer-motion": "^10.16.4",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-rotating-text": "^1.4.1",
     "react-router-dom": "^6.18.0",
+    "rotating-text": "^1.0.4",
+    "three": "^0.161.0",
     "vanta": "^0.5.24"
   },
   "devDependencies": {
