--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.14.15",
     "@react-three/drei": "^9.97.0",
     "@react-three/fiber": "^8.15.16",
+    "@types/three": "^0.161.2",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
@@ -29,8 +30,7 @@
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^6.18.0",
     "rotating-text": "^1.0.4",
-    "three": "^0.161.0",
-    "vanta": "^0.5.24"
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -42,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
+    "vanta": "^0.5.24",
     "vite": "^4.4.5"
   }
 }
