add profile section

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/jetbrains-mono": "^5.0.19",
+    "@fontsource-variable/nunito": "^5.0.17",
     "@fontsource-variable/overpass": "^5.0.17",
     "@fontsource/jetbrains-mono": "^5.0.18",
     "@fontsource/roboto": "^5.0.8",
+    "@fontsource/syncopate": "^5.0.18",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@react-three/drei": "^9.97.0",
