--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@types/three": "^0.161.2",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
