--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,14 @@
     "@fontsource/syncopate": "^5.0.18",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@react-three/drei": "^9.97.0",
     "@react-three/fiber": "^8.15.16",
     "@types/three": "^0.161.2",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
