--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "gsap-trial": "^3.12.5",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-rotating-text": "^1.4.1",
