--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,24 +21,32 @@
     "@fontsource/jetbrains-mono": "^5.0.18",
     "@fontsource/roboto": "^5.0.8",
     "@fontsource/syncopate": "^5.0.18",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/mdx": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.0",
     "@types/three": "^0.161.2",
     "framer-motion": "^10.16.4",
+    "gatsby-plugin-mdx": "^5.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^6.18.0",
+    "remark-gfm": "^4.0.0",
     "rotating-text": "^1.0.4",
     "three": "^0.161.0"
   },
   "devDependencies": {
+    "@types/node": "^22.7.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
