--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "@fontsource/syncopate": "^5.0.18",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/mdx": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
+    "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@react-three/drei": "^9.102.6",
@@ -34,6 +34,7 @@
     "gatsby-source-filesystem": "^5.13.1",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
@@ -41,6 +42,8 @@
     "react-markdown": "^9.0.1",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^6.18.0",
+    "react-simple-code-editor": "^0.14.1",
+    "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
     "rotating-text": "^1.0.4",
     "three": "^0.161.0"
