--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "three": "^0.161.0"
   },
   "devDependencies": {
+    "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
